fix: dont block debugger on packages build (#6900)
* use secrets not env for gh token

* fix: dont block debugger on packages build

* Revert "use secrets not env for gh token"

This reverts commit 4174e1e64b8f5c3376733c0ee389b8b4e0185b61.

* update jb test inputs

* Update action.yml

* ci fix

--- a/.github/actions/setup-packages/action.yml
+++ b/.github/actions/setup-packages/action.yml
@@ -1,8 +1,8 @@
-name: 'Setup Packages'
-description: 'Cache and build packages with npm caching'
+name: "Setup Packages"
+description: "Cache and build packages with npm caching"
 
 runs:
-  using: 'composite'
+  using: "composite"
   steps:
     - uses: actions/setup-node@v4
       with:
@@ -21,17 +21,3 @@ runs:
     - name: Build packages
       shell: bash
       run: node ./scripts/build-packages.js
-
-    - name: Install package dependencies
-      shell: bash
-      run: |
-        for package_dir in packages/*/; do
-          if [ -f "$package_dir/package.json" ] && [ ! -d "$package_dir/node_modules" ]; then
-            echo "Installing dependencies for $package_dir"
-            cd "$package_dir"
-            npm ci
-            cd - > /dev/null
-          elif [ -d "$package_dir/node_modules" ]; then
-            echo "Using cached dependencies for $package_dir"
-          fi
-        done
