--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,6 +5,8 @@
     "src/**/*.test.tsx",
     "src/**/*.spec.ts", 
     "src/**/*.spec.tsx",
+    "src/**/*.vitest.ts",
+    "src/**/*.vitest.tsx",
     "src/test-utils/**/*",
     "src/**/__tests__/**/*",
     "src/**/__mocks__/**/*"
