--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
 name: Release
 
 on:
-  schedule:
-    # Run every day at 9am UTC
-    - cron: "0 9 * * *"
+  # schedule:
+  #   # Run every day at 9am UTC
+  #   - cron: "0 9 * * *"
   workflow_dispatch:
     # Allow manual triggering
 
