--- a/.github/workflows/cli-review.yaml
+++ b/.github/workflows/cli-review.yaml
@@ -15,15 +15,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - uses: actions/setup-node@v4
+        with:
+          node-version-file: ".nvmrc"
+      
+      - name: Install Continue CLI
+        run: npm install -g @continuedev/cli@1.4.21
+      
       - name: Run Continue CLI Review
         run: |
-          echo "Running Continue CLI with prompt:"
+          echo "Running Continue CLI with hardcoded prompt:"
           echo "=================================="
-          cat review_prompt.txt
+          echo "Review this pull request and provide feedback on code quality"
           echo "=================================="
           echo ""
 
-          # Run the CLI with the generated prompt and output text directly
-          cat review_prompt.txt | cn --config "${{ inputs.assistant }}" -p
+          # Run the CLI with a hardcoded prompt and output text directly
+          echo "Review this pull request and provide feedback on code quality" | cn --config "${{ inputs.assistant }}" -p
         env:
           CONTINUE_API_KEY: ${{ secrets.CONTINUE_API_KEY }}
