fix: :green_heart: The dist directory was not getting created

--- a/.github/actions/build-vscode-extension/action.yml
+++ b/.github/actions/build-vscode-extension/action.yml
@@ -91,6 +91,12 @@ runs:
         cd gui
         npm ci
 
+    - name: Build GUI
+      shell: bash
+      run: |
+        cd gui
+        npm run build
+
     - name: Install core dependencies
       shell: bash
       run: |
