fix: :green_heart: Install Vite

--- a/.github/actions/build-vscode-extension/action.yml
+++ b/.github/actions/build-vscode-extension/action.yml
@@ -95,6 +95,7 @@ runs:
       shell: bash
       run: |
         cd gui
+        npm i -g vite
         npm run build
 
     - name: Install core dependencies
