fix: :green_heart: Pass github secret correctly to composite workflow

--- a/.github/actions/build-vscode-extension/action.yml
+++ b/.github/actions/build-vscode-extension/action.yml
@@ -18,6 +18,9 @@ inputs:
     description: 'Commit SHA for version modification (optional, uses first 7 chars)'
     required: false
     default: ''
+  github-token:
+    description: 'GitHub token for downloading ripgrep'
+    required: true
 outputs:
   target:
     description: 'The target string used for the build'
@@ -83,7 +86,7 @@ runs:
         npm ci
       env:
         # https://github.com/microsoft/vscode-ripgrep/issues/9#issuecomment-643965333
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ inputs.github-token }}
 
     - name: Install gui dependencies
       shell: bash
