--- a/.github/workflows/pr-build-upload-vsix.yaml
+++ b/.github/workflows/pr-build-upload-vsix.yaml
@@ -36,8 +36,7 @@ jobs:
           npm_config_arch: ${{ matrix.arch }}
           pre-release: false
           commit-sha: ${{ github.sha }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.CI_GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
