Put back the chdir and build from root gui

--- a/.github/actions/run-jetbrains-tests/action.yml
+++ b/.github/actions/run-jetbrains-tests/action.yml
@@ -31,7 +31,7 @@ runs:
     - name: Install gui node_modules and build
       shell: bash
       run: |
-        cd ../../gui
+        cd gui
         npm ci
         npm run build
 
