--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "cn": "dist/index.js"
   },
   "scripts": {
-    "test": "npm run lint && cross-env NODE_OPTIONS=--experimental-vm-modules jest",
-    "vitest": "vitest run",
-    "vitest:watch": "vitest watch",
+    "test": "npm run lint && vitest run",
+    "test:watch": "vitest watch",
+    "test:ui": "vitest --ui",
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
@@ -81,21 +81,20 @@
     "@types/glob": "^8.1.0",
     "@types/ignore-walk": "^4.0.3",
     "@types/ink-testing-library": "^1.0.4",
-    "@types/jest": "^29.5.14",
     "@types/jszip": "^3.4.0",
     "@types/nock": "^10.0.3",
     "@types/readline-sync": "^1.4.8",
     "@types/supertest": "^6.0.3",
+    "@vitest/ui": "^3.2.4",
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "cross-env": "^7.0.3",
     "execa": "^9.6.0",
     "express": "^5.1.0",
+    "happy-dom": "^18.0.1",
     "ink-testing-library": "^4.0.0",
-    "jest": "^29.7.0",
     "nock": "^14.0.5",
     "semantic-release": "^24.2.7",
     "supertest": "^7.1.3",
-    "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "vitest": "^3.2.4"
