--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmitOnError": false,
-    "types": ["node", "jest"],
+    "types": ["node", "vitest/globals"],
     "outDir": "dist",
     "declaration": true,
     "sourceMap": true,
