--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Run tests (excluding e2e on Windows)
         if: matrix.os == 'windows-latest'
         shell: bash
-        run: npm test -- --testPathIgnorePatterns='.*e2e.*'
+        run: npm test -- --exclude='**/*.e2e.*' --exclude='**/e2e/**'
 
       - name: Run linting
         run: npm run lint
