--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,5 +52,8 @@
   "conventionalCommits.promptBody": false,
   "conventionalCommits.promptFooter": false,
   "conventionalCommits.promptScopes": true,
-  "conventionalCommits.scopes": ["reg"]
+  "conventionalCommits.scopes": [
+    "reg"
+  ],
+  "java.configuration.updateBuildConfiguration": "interactive"
 }
