--- a/extensions/intellij/gradle.properties
+++ b/extensions/intellij/gradle.properties
@@ -7,3 +7,6 @@ platformVersion=2022.3.3
 kotlin.stdlib.default.dependency=false
 org.gradle.configuration-cache=true
 org.gradle.caching=true
+
+# Java configuration
+org.gradle.java.home=/usr/lib/jvm/java-17-openjdk-amd64
