--- a/packages/continue-sdk/tsconfig.json
+++ b/packages/continue-sdk/tsconfig.json
@@ -7,9 +7,9 @@
     "strict": true,
     "outDir": "dist",
     "declaration": true,
-    "types": ["node", "jest"],
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "isolatedModules": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "typescript"]
+  "include": ["typescript/**/*", "~*/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules", "dist"]
 }
