--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "glob": "^11.0.3",
+    "gpt-tokenizer": "^3.0.1",
     "ignore-walk": "^7.0.0",
     "ink": "^6.0.1",
     "jszip": "^3.10.1",
