--- a/.github/workflows/compliance.yaml
+++ b/.github/workflows/compliance.yaml
@@ -40,7 +40,7 @@ jobs:
           fi
 
       - name: Add PR title guidance comment
-        if: steps.pr-title-check.outputs.valid == 'false'
+        if: always() && steps.pr-title-check.outputs.valid == 'false'
         uses: actions/github-script@v7
         with:
           script: |
@@ -88,6 +88,9 @@ jobs:
                 ].join('\n')
               });
             }
+      - name: Ensure job always succeeds
+        if: always()
+        run: echo "✅ Conventional commits check completed (warning only)"
 
   security-audit:
     name: Security Audit
