fix: use older API from 2023.3

--- a/extensions/intellij/gradle.properties
+++ b/extensions/intellij/gradle.properties
@@ -1,6 +1,6 @@
 pluginGroup=com.github.continuedev.continueintellijextension
-pluginRepositoryUrl=https://github.com/continuedev/continue
 pluginVersion=1.0.34
+platformVersion=2023.3
 kotlin.stdlib.default.dependency=false
 org.gradle.configuration-cache=true
 org.gradle.caching=true
