--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,11 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Have a question or thoughts?
+  - name: Have a feature request?
     url: https://github.com/orgs/community/discussions
-    about: Search for existing discussions or start a new one
+    about: Upvote existing suggestions or make a new one
+  - name: Have a question?
+    url: https://github.com/orgs/community/discussions
+    about: Search for existing questions or ask a new one
   - name: Something else? Join the Continue Community
     url: https://discord.gg/vapESyrFmJ
     about: Join our Discord to chat with our community
