--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "posthog-node": "^5.6.0",
     "react": "^19.1.0",
     "readline-sync": "^1.4.10",
+    "swr": "^2.3.4",
     "turndown": "^7.2.0",
     "typescript": "^5.8.3",
     "uuid": "^9.0.1",
