--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.3",
     "@semantic-release/npm": "^12.0.2",
+    "@testing-library/react": "^16.3.0",
     "@types/diff": "^7.0.2",
     "@types/express": "^5.0.3",
     "@types/glob": "^8.1.0",
@@ -105,6 +106,7 @@
     "express": "^5.1.0",
     "happy-dom": "^18.0.1",
     "ink-testing-library": "^4.0.0",
+    "jsdom": "^26.1.0",
     "nock": "^14.0.5",
     "semantic-release": "^24.2.7",
     "supertest": "^7.1.3",
