--- a/.github/workflows/jetbrains-release.yaml
+++ b/.github/workflows/jetbrains-release.yaml
@@ -249,7 +249,7 @@ jobs:
           CERTIFICATE_CHAIN: ${{ secrets.JETBRAINS_CERTIFICATE_CHAIN }}
           PRIVATE_KEY: ${{ secrets.JETBRAINS_PRIVATE_KEY }}
           PRIVATE_KEY_PASSWORD: ${{ secrets.JETBRAINS_PRIVATE_KEY_PASSWORD }}
-          RELEASE_CHANNEL: eap
+          RELEASE_CHANNEL: default
         run: ./gradlew buildPlugin --info --stacktrace
 
       # Publish the plugin to JetBrains Marketplace
