--- a/.github/actions/run-jetbrains-tests/action.yml
+++ b/.github/actions/run-jetbrains-tests/action.yml
@@ -107,7 +107,7 @@ runs:
         Xvfb -ac :99 -screen 0 1920x1080x24 &
         sleep 10
         mkdir -p build/reports
-        ./gradlew runIdeForUiTests &
+        ./gradlew runIdeForUiTests --info --stacktrace &
 
     - name: Wait for JB connection
       uses: jtalk/url-health-check-action@v3
