--- a/.github/workflows/similar-issues.yml
+++ b/.github/workflows/similar-issues.yml
@@ -11,7 +11,7 @@ jobs:
     permissions:
       issues: write
       pull-requests: write
-      
+
     steps:
       - name: Checkout deja-view
         uses: actions/checkout@v4
@@ -19,43 +19,92 @@ jobs:
           repository: 'bdougie/deja-view'
           # Option 1: Pin to specific commit (most secure)
           ref: '45e7696'  # Pin to specific commit for stability
-      
+          
+          # Option 2: Use a tag (recommended after creating releases)
+          # ref: 'v1.0.0'
+          
+          # Option 3: Use main branch (least secure, gets latest changes)
+          # ref: 'main'
+          
+          path: deja-view
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      
+
       - name: Install dependencies
         run: |
           cd deja-view
           pip install -r requirements.txt
       
+      - name: Index repository if needed
+        env:
+          CHROMA_API_KEY: ${{ secrets.CHROMA_CLOUD_API_KEY }}
+          CHROMA_TENANT: ${{ secrets.CHROMA_TENANT }}
+          CHROMA_DATABASE: ${{ secrets.CHROMA_DATABASE }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          cd deja-view
+          
+          # Index the repository (this will update existing index)
+          python cli.py index "${{ github.repository }}" --max-issues 200 || true
+      
       - name: Search for similar issues
         id: search
         env:
-          CHROMA_CLOUD_API_KEY: ${{ secrets.CHROMA_CLOUD_API_KEY }}
-          CHROMA_CLOUD_API_URL: ${{ secrets.CHROMA_CLOUD_API_URL }}
+          CHROMA_API_KEY: ${{ secrets.CHROMA_CLOUD_API_KEY }}
+          CHROMA_TENANT: ${{ secrets.CHROMA_TENANT }}
+          CHROMA_DATABASE: ${{ secrets.CHROMA_DATABASE }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           cd deja-view
           
           # Determine if this is an issue or PR
           if [ "${{ github.event_name }}" = "pull_request" ]; then
-            TITLE="${{ github.event.pull_request.title }}"
+            ISSUE_URL="https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }}"
             THRESHOLD="0.85"
             TOP_K="5"
           else
-            TITLE="${{ github.event.issue.title }}"
+            ISSUE_URL="https://github.com/${{ github.repository }}/issues/${{ github.event.issue.number }}"
             THRESHOLD="0.7"
-            TOP_K="3"
+            TOP_K="5"
           fi
           
+          # Create a Python script to search and format as JSON
+          cat << 'PYTHON_SCRIPT' > search_similar.py
+          import sys
+          import json
+          import os
+          from github_similarity_service import SimilarityService
+          
+          issue_url = sys.argv[1]
+          threshold = float(sys.argv[2])
+          top_k = int(sys.argv[3])
+          
+          # Parse issue number from URL
+          issue_number = int(issue_url.split('/')[-1])
+          repo_parts = issue_url.split('/')
+          owner = repo_parts[3]
+          repo = repo_parts[4]
+          
+          service = SimilarityService()
+          
+          # Find similar issues
+          similar = service.find_similar_issues(
+              owner=owner,
+              repo=repo,
+              issue_number=issue_number,
+              top_k=top_k,
+              min_similarity=threshold
+          )
+          
+          # Format as JSON
+          print(json.dumps(similar))
+          PYTHON_SCRIPT
+          
           # Search for similar issues
-          SIMILAR_ISSUES=$(python cli.py search "$TITLE" \
-            --repo "${{ github.repository }}" \
-            --top-k $TOP_K \
-            --threshold $THRESHOLD \
-            --format json)
+          SIMILAR_ISSUES=$(python search_similar.py "$ISSUE_URL" "$THRESHOLD" "$TOP_K")
           
           # Save to output
           echo "similar_issues<<EOF" >> $GITHUB_OUTPUT
@@ -73,6 +122,9 @@ jobs:
         id: discussion_check
         if: github.event_name == 'issues'
         env:
+          CHROMA_API_KEY: ${{ secrets.CHROMA_CLOUD_API_KEY }}
+          CHROMA_TENANT: ${{ secrets.CHROMA_TENANT }}
+          CHROMA_DATABASE: ${{ secrets.CHROMA_DATABASE }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           cd deja-view
