--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "repomix:cli": "npx repomix --ignore sdk-repomix.xml -o cli-repomix.xml",
     "lint": "tsc --noEmit && eslint .",
     "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "typecheck": "tsc --noEmit",
     "watch:logs": "tail -f ~/.continue/logs/cn.log",
     "prepare": "npm run build",
@@ -105,6 +107,7 @@
     "happy-dom": "^18.0.1",
     "ink-testing-library": "^4.0.0",
     "nock": "^14.0.5",
+    "prettier": "^3.6.2",
     "semantic-release": "^24.2.7",
     "supertest": "^7.1.3",
     "ts-node": "^10.9.2",
