--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -10,6 +10,42 @@ permissions:
   issues: write
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run linting
+        run: npm run lint
+
+  format-check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Check code formatting
+        run: npm run format:check
+
   test:
     strategy:
       matrix:
@@ -43,12 +79,6 @@ jobs:
         shell: bash
         run: npm test -- --exclude='**/*.e2e.*' --exclude='**/e2e/**'
 
-      - name: Run linting
-        run: npm run lint
-
-      - name: Check code formatting
-        run: npm run format:check
-
   review:
     uses: ./.github/workflows/continue-review.yaml
     secrets:
@@ -68,6 +98,8 @@ jobs:
     if: always()
     runs-on: ubuntu-latest
     needs:
+      - lint
+      - format-check
       - test
 
     steps:
