--- a/config.json
+++ b/config.json
@@ -1,27 +1,48 @@
 {
-  "models": [
+  "mcpServers": [
     {
-      "title": "EchoMCP",
-      "provider": "openai",
-      "model": "echo-mcp",
-      "apiBase": "http://localhost:8000/v1",
+      "name": "EchoMCP",
+      "url": "http://localhost:8000",
+      "provider": "alsania",
       "requestOptions": {
         "headers": {
-          "Content-Type": "application/json"
+          "Content-Type": "application/json",
+          "Authorization": "Bearer not_needed"
         },
         "timeout": 7200
       }
     }
   ],
-  "defaultModel": "EchoMCP",
+  "models": [
+    {
+      "title": "Echo-001",
+      "provider": "alsania",
+      "model": "echo-001",
+      "mcpServer": "EchoMCP",
+      "maxTokens": 30000,
+      "temperature": 0.7,
+      "topP": 1,
+      "frequencyPenalty": 0,
+      "presencePenalty": 0,
+      "stopSequences": [],
+      "logitBias": {},
+      "requestOptions": {
+        "headers": {
+          "Content-Type": "application/json",
+          "Authorization": "Bearer not_needed"
+        },
+        "timeout": 30000
+      }
+    }
+  ],
+  "defaultModel": "echo-001",
   "contextProviders": [
     {
-      "name": "http",
+      "name": "alsania",
       "params": {
-        "url": "http://localhost:8000/chat",
         "title": "EchoMCP Context",
         "description": "Get context from EchoMCP backend",
-        "displayTitle": "EchoMCP"
+        "displayTitle": "Echo-001"
       }
     },
     {
@@ -38,9 +59,32 @@
     "You are EchoMCP, a helpful AI assistant connected to the EchoMCP backend.",
     "Always provide clear and concise responses.",
     "When asked about your capabilities, mention that you're connected to the EchoMCP backend running on localhost:8000.",
-    "Use the EchoMCP backend for all chat interactions and context retrieval."
+    "Use the EchoMCP backend for all chat interactions and context retrieval.",
+    "Always follow the alsania-rules.md rules.",
+    "Always follow the alsania-code-of-conduct.md code of conduct."
   ],
   "ui": {
-    "displayRawMarkdown": false
-  }
+    "theme": "dark"
+  },
+  "codingAssistant": {
+    "provider": "mistral",
+    "apiBase": "https://api.mistral.ai/v1",
+    "model": "mamba-codestral-7b-v0.1-instruct-python_coding_assistant",
+    "temperature": 0.7,
+    "stream": false
+  },
+  "agent": {
+    "provider": "openai",
+    "apiBase": "https://api.openai.com/v1",
+    "model": "gpt-3.5-turbo-0613",
+    "temperature": 0.7,
+    "stream": false
+  },
+  "extensions": [],
+  "plugins": [
+    {
+      "name": "remote-plugin-name",
+      "path": "./plugins/remote-plugin.js"
+    }
+  ]
 }
