--- a/core/package.json
+++ b/core/package.json
@@ -46,7 +46,6 @@
     "vitest": "^3.1.4"
   },
   "dependencies": {
-    "@sap-ai-sdk/orchestration": "1.14.0",
     "@aws-sdk/client-bedrock-runtime": "^3.779.0",
     "@aws-sdk/client-sagemaker-runtime": "^3.777.0",
     "@aws-sdk/credential-providers": "^3.778.0",
@@ -58,6 +57,9 @@
     "@modelcontextprotocol/sdk": "^1.12.0",
     "@mozilla/readability": "^0.5.0",
     "@octokit/rest": "^20.1.1",
+    "@sap-ai-sdk/orchestration": "1.14.0",
+    "@sap-cloud-sdk/connectivity": "^4.1.1",
+    "@sap/bas-sdk": "^3.11.6",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@xenova/transformers": "2.14.0",
     "adf-to-md": "^1.1.0",
