improv: eslint config (#163)
* improv: eslint config

* chore: temporarily disable rules

* fix: negated conditions

* improv: disable linting when testing

* fix: too many parameters errors

* fix: complexity errors

* fix: complexity

* fix: complexity

* fix: complexity

* fix: complexity

* fix: unused imports

* fix: imports

* fix: complexity

* fix: complexity

* fix: linter errors

* fix: complexity

* fix: linter errors

* fix: linter errors

* fix: complexity

* fix: linter errors

* fix: linter errors

* fix: complexity

* fix: imports

* fix: complexity

* fix: complexity

* fix: type errors

* fix: lint

* fix: lint

* fix: file length

* fix: lint

* fix: failing tests

* fix: prettier

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "cn": "dist/index.js"
   },
   "scripts": {
-    "test": "npm run lint && vitest run",
+    "test": "vitest run",
     "test:watch": "vitest watch",
     "test:ui": "vitest --ui",
     "build": "tsc -p tsconfig.build.json",
